[package]
name = "peronio_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21.0"